# strict_linking_rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
prove-it-fails/: Cargo.toml
prove-it-fails/src/: main.rs
src/: lib.rs
strict_linking/: Cargo.toml
strict_linking/src/: lib.rs
strict_linking_fail_test/: Cargo.toml  build.rs
strict_linking_fail_test/src/: main.rs
strict_linking_success_test/: Cargo.toml  build.rs
strict_linking_success_test/src/: main.c  main.rs
